2023-02-08  Martin Pärtel <martin dot partel at gmail dot com>

	* Released 1.17.2

2023-02-07  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed FD leak when using --block-devices-as-files
	  (issue #125, thanks @mafanasyev-tri)

2022-10-17  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed --resolve-symlinks when mountpoint name starts
	  with source dir name (issue #122, thanks @1-eric)
	* Released 1.17.1

2022-10-06  Martin Pärtel <martin dot partel at gmail dot com>

	* Basic OpenBSD support. The test suite does not pass yet.

2022-07-12  Martin Pärtel <martin dot partel at gmail dot com>

	* Reverted change in 1.16.0 that made direct_io the default.
	  It turned out to be more problematic than not having it.
	  (issue #117, thanks @DUOLabs333 and @Misterio77)
	* Released 1.17.0

2022-06-24  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --map-{passwd,group}-rev
	  (PR #113 by @sshilovsky, thanks!)
	* Fixed build on FreeBSD
	* Released 1.16.1

2022-06-18  Martin Pärtel <martin dot partel at gmail dot com>

	* Released 1.16.0

2022-04-03  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --no-direct-io and enabled FUSE's direct_io by default
	  (issue #110, thanks @DUOLabs333)

2021-02-15  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed build on old compilers by adhering more strictly to C99.
	* Released 1.15.1

2021-02-14  Martin Pärtel <martin dot partel at gmail dot com>

	* Support for libfuse3 - huge thanks to @McBane87 (PR #95)
	* Released 1.15.0

2021-01-24  Martin Pärtel <martin dot partel at gmail dot com>

	* Non-zero exit code when unable to chdir into source dir (issue #93).
	* Pass through "-o fsname" to FUSE (issue #94).
	* Released 1.14.9

2020-09-23  Martin Pärtel <martin dot partel at gmail dot com>

	* Added missing include for "sys/file.h".
	* Added flock copy-pasta needed by XCode 12 (issue #88).
	* Released 1.14.8

2020-05-13  Martin Pärtel <martin dot partel at gmail dot com>
